# Mosaic

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Mosaic.sln  Mosaic.slnx  README.md  ROADMAP.md  deny.toml  docker-compose.dev.yml  docker-compose.test.proxyauth.yml  docker-compose.test.yml  docker-compose.yml  frontend-test-output.txt  gradle.properties  package-lock.json  package.json  rust-toolchain.toml  settings.gradle.kts  tsconfig.json
.cargo/: config.toml
.github/: .copilotignore  agents.md  copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  publish.yml  tests.yml
Properties/: launchSettings.json
apps/admin/: .instructions.md  Dockerfile  nginx.conf  package-lock.json  package.json  test-output.txt  test-run-output2.txt  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/android-main/: .instructions.md  (+3 more)
crates/mosaic-client/: Cargo.toml
crates/mosaic-client/src/: lib.rs  snapshot_schema.rs  state_machine.rs
crates/mosaic-client/src/download/: error.rs  mod.rs  plan.rs  scope.rs  snapshot.rs  state.rs
crates/mosaic-client/src/telemetry/: mod.rs
crates/mosaic-client/tests/: account_unlock.rs  adr006_compositional_attack_blocked.rs  album_sync_phase_lock.rs  client_core_state_machines.rs  download_phase_enum_lock.rs  download_snapshot_invariants_locked.rs  download_snapshot_key_registry_lock.rs  download_snapshot_v2_migration.rs  download_snapshot_v3_migration.rs  download_state_machine_crafted_snapshots.rs  download_state_machine_replay.rs  epoch_bundle_handles.rs  epoch_handle_concurrency.rs  epoch_handles.rs  error_mapping.rs  ffi_spike.rs  golden_vectors.rs  legacy_raw_key_handle.rs  link_tier_v2_aad.rs  mutation_kills.rs  phase_enum_lock.rs  public_api_smoke.rs  snapshot_invariants_locked.rs  snapshot_key_registry_lock.rs  state_machine_core.rs  state_machine_crafted_snapshots.rs  telemetry_ring_buffer.rs  upload_state_machine_locked.rs  upload_state_machine_replay.rs
crates/mosaic-crypto/: Cargo.toml
crates/mosaic-crypto/src/: content.rs  lib.rs  link_sharing.rs  sharing.rs  streaming.rs  ts_canonical.rs
crates/mosaic-crypto/src/sidecar/: errors.rs  mod.rs  pake.rs  tunnel.rs
crates/mosaic-crypto/tests/: account_creation.rs  auth_challenge_signing.rs  content.rs  envelope_crypto.rs  epoch_keys.rs  ffi_spike_crypto.rs  golden_vectors.rs  identity.rs  kdf_and_auth_label_lock.rs  keychain.rs  legacy_raw_key_fallback.rs  link_sharing.rs  manifest_signing.rs  manifest_signing_v2.rs  mutation_kills.rs  session_key_derivation.rs  sharing.rs  sharing_vector.rs.inc  sidecar_pake_vectors.rs  sidecar_tunnel_vectors.rs  streaming_shard.rs  verify_shard_integrity.rs  wave4a_core_apis.rs
crates/mosaic-crypto/tests/fixtures/legacy_shard/: 404142434445464748494a4b4c4d4e4f505152535455565758595a5b5c5d5e5f-legacy-plaintext.plaintext
crates/mosaic-crypto/tests/fixtures/shard_integrity/: fixed-v3-envelope.sha256
crates/mosaic-domain/: Cargo.toml
crates/mosaic-domain/src/: lib.rs
crates/mosaic-domain/tests/: canonical_tier_dimensions_pin.rs  envelope_header.rs  golden_vectors.rs  late_v1_protocol_freeze_lock.rs  late_v1_protocol_freeze_spec.rs  manifest_transcript.rs  manifest_transcript_v2.rs  member_roster_transcript.rs  metadata_sidecar.rs  mutation_kills.rs  sidecar_tag_table.rs  tombstone_transcript.rs
crates/mosaic-parity-tests/: Cargo.toml  README.md
crates/mosaic-parity-tests/tests/: cross_platform_parity.rs
crates/mosaic-uniffi/: Cargo.toml
crates/mosaic-uniffi/src/: lib.rs
crates/mosaic-uniffi/tests/: api_shape_lock.rs  coverage_extras.rs  cross_client_vectors.rs  cross_wrapper_parity.rs  error_code_parity.rs  error_code_table.rs  ffi_snapshot.rs  link_sharing_v2_facade.rs  parser_equivalence.rs
crates/mosaic-uniffi/tests/golden/: uniffi_api.txt
crates/mosaic-vectors/: Cargo.toml
crates/mosaic-vectors/src/: lib.rs
crates/mosaic-vectors/tests/: differential.rs
crates/mosaic-wasm/: Cargo.toml
crates/mosaic-wasm/src/: lib.rs
crates/mosaic-wasm/tests/: account_facade.rs  album_content_facade.rs  api_shape_lock.rs  auth_facade.rs  bundle_facade.rs  debug_redaction_lock.rs  decrypt_shard_with_seed.rs  download_apply_event.rs  download_apply_event_illegal.rs  download_build_plan.rs  download_snapshot_roundtrip.rs  download_snapshot_schedule_roundtrip.rs  error_code_table.rs  ffi_snapshot.rs  js_shim_parity.rs  key_wrap_facade.rs  link_sharing_facade.rs  link_sharing_v2_facade.rs  manifest_signing_facade.rs  sidecar_pake_tunnel.rs  streaming_shard.rs
crates/mosaic-wasm/tests/common/: mod.rs
crates/mosaic-wasm/tests/golden/: mosaic_wasm.d.ts
docs/: ARCHITECTURE.md  AUDIT-anonymous-projections-2026-05-19.md  AUTHELIA.md  DEPENDENCY_POLICY.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  E2E_TEST_COVERAGE_PLAN.md  EXPORT_FORMAT.md  FEATURES.md  FEATURE_EXPIRATION.md  IMPLEMENTATION_PLAN.md  INSTRUCTION_TREE.md  PROPOSAL-E2E-Framework-Redesign.md  QUOTA_LIMITS_DESIGN.md  RELEASE.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  SECURITY_AUDIT.md  TECH_STACK.md  TROUBLESHOOTING.md  openapi.json  sidecar-beta-rollout.md  sidecar-test-matrix.md
gradle/: libs.versions.toml
scripts/: Dockerfile.wasm-build  build-android-main.ps1  build-android-main.sh  build-rust-android.ps1  build-rust-android.sh  build-rust-wasm-docker.ps1  build-rust-wasm-docker.sh  build-rust-wasm.ps1  build-rust-wasm.sh  check-band8-validation-readiness.ps1  check-i18n-parity.mjs  dev.ps1  dev.sh  docker-build.ps1  docker-build.sh  dump-bundle-vector.mjs  export-openapi.ps1  export-openapi.sh  generate-worker-crypto-error-codes.mjs  mosaic.ps1  mosaic.sh  regenerate-test-vectors.mjs  regenerate-test-vectors.ps1  regenerate-test-vectors.sh  run-e2e-tests.ps1  run-e2e-tests.sh  run-parity-tests.ps1  run-perf-budgets.ps1  run-tests.ps1  run-tests.sh  rust-check.ps1  rust-check.sh  test-android-main.ps1  test-android-main.sh  test-android-shell.ps1  test-android-shell.sh  verify-production-wasm-no-weak-kdf.mjs
supply-chain/: config.toml
(+1596 files in other folders)
