[workspace]
resolver = "3"
members = [
  "crates/mosaic-domain",
  "crates/mosaic-crypto",
  "crates/mosaic-client",
  "crates/mosaic-media",
  "crates/mosaic-parity-tests",
  "crates/mosaic-wasm",
  "crates/mosaic-uniffi",
  "crates/mosaic-vectors",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/adsamcik/Mosaic"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
codegen-units = 1
# debug = "none" is critical for cross-host WASM byte-determinism: any
# debug info embeds host absolute paths whose separators differ (\ on
# Windows vs / on Linux). --remap-path-prefix collapses the prefix but
# cannot rewrite separators inside the rest of the path. With
# `debug = "none"` the section is omitted entirely — panic messages still
# carry their string content but no source coordinates.
debug = "none"
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
