[package]
name = "mosaic-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
mosaic-crypto = { path = "../mosaic-crypto", version = "0.1.0" }
mosaic-domain = { path = "../mosaic-domain", version = "0.1.0" }

[lints]
workspace = true
