[package]
name = "mosaic-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
mosaic-domain = { path = "../mosaic-domain", version = "0.1.0" }
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "=2.1.0", default-features = false, features = ["alloc", "fast", "zeroize"] }
sha2 = { version = "=0.10.9", default-features = false }
subtle = "=2.6.1"
zeroize = "=1.8.2"
getrandom = { version = "=0.4.2", features = ["wasm_js"] }
argon2 = { version = "=0.5.3", default-features = false, features = ["zeroize"] }
hkdf = { version = "=0.12.4", default-features = false }
blake2 = { version = "=0.10.6", default-features = false }
crypto_box = { version = "=0.9.1", default-features = false, features = ["alloc", "rand_core", "salsa20", "seal"] }
crypto_secretbox = { version = "=0.1.1", default-features = false, features = ["alloc", "salsa20"] }
rand_core = { version = "=0.6.4", default-features = false }
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "=1.0.149", default-features = false, features = ["alloc"] }

[features]
default = []
# SECURITY: Relaxes Argon2id minimums to 8 MiB / 1 iteration so the KDF is
# fast enough for mutation testing and E2E fixtures. MUST NOT be enabled in
# production builds. Mirrors the TypeScript `VITE_E2E_WEAK_KEYS=true` mode in
# `libs/crypto/src/argon2-params.ts`. CI release pipelines must build with
# `--no-default-features` (or the production feature set) and verify this flag
# is off.
weak-kdf = []

[dev-dependencies]
crypto_box = { version = "=0.9.1", default-features = false, features = ["alloc", "rand_core", "salsa20", "seal"] }
rand_core = { version = "=0.6.4", default-features = false }
getrandom = { version = "=0.4.2", features = ["wasm_js"] }
blake2 = { version = "=0.10.6", default-features = false }

[lints]
workspace = true
