[package]
name = "mosaic-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]

[dev-dependencies]
regex = "1"

[features]
cross-client-vectors = []

[lints]
workspace = true
