[package]
name = "mosaic-parity-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
parity-tests = []
cross-client-vectors = [
  "mosaic-crypto/__test-introspection",
  "mosaic-uniffi/cross-client-vectors",
  "mosaic-wasm/cross-client-vectors",
]
weak-kdf = ["mosaic-crypto/weak-kdf", "mosaic-wasm/weak-kdf", "mosaic-uniffi/weak-kdf"]

[dependencies]
ciborium = "=0.2.2"
mosaic-client = { path = "../mosaic-client", version = "0.0.0-dev" }
mosaic-crypto = { path = "../mosaic-crypto", version = "0.0.0-dev" }
mosaic-domain = { path = "../mosaic-domain", version = "0.0.0-dev" }
mosaic-media = { path = "../mosaic-media", version = "0.0.0-dev" }
mosaic-uniffi = { path = "../mosaic-uniffi", version = "0.0.0-dev" }
mosaic-vectors = { path = "../mosaic-vectors", version = "0.0.0-dev" }
mosaic-wasm = { path = "../mosaic-wasm", version = "0.0.0-dev" }
sha2 = { version = "=0.11.0", default-features = false }

[dev-dependencies]
proptest = "=1.6.0"

[lints]
workspace = true
