[package]
name = "mosaic-uniffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
mosaic-client = { path = "../mosaic-client", version = "0.1.0" }
mosaic-crypto = { path = "../mosaic-crypto", version = "0.1.0" }
mosaic-domain = { path = "../mosaic-domain", version = "0.1.0" }
mosaic-media = { path = "../mosaic-media", version = "0.1.0" }
uniffi = { version = "=0.31.1", default-features = false, features = ["scaffolding-ffi-buffer-fns"] }
zeroize = "=1.8.2"

[lints]
workspace = true
