[package]
name = "mosaic-vectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
mosaic-domain = { path = "../mosaic-domain", version = "0.1.0" }
mosaic-crypto = { path = "../mosaic-crypto", version = "0.1.0" }
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "=1.0.149", default-features = false, features = ["alloc"] }
sha2 = { version = "=0.10.9", default-features = false }

[dev-dependencies]

[lints]
workspace = true
