[package]
name = "mosaic-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mosaic-client = { path = "../mosaic-client", version = "0.1.0" }
mosaic-crypto = { path = "../mosaic-crypto", version = "0.1.0" }
mosaic-domain = { path = "../mosaic-domain", version = "0.1.0" }
mosaic-media = { path = "../mosaic-media", version = "0.1.0" }
self_cell = "=1.2.2"
wasm-bindgen = "=0.2.118"
zeroize = "=1.8.2"
ciborium = "=0.2.2"
blake2 = { version = "=0.10.6", default-features = false }

[features]
default = []
# SECURITY: Propagates `mosaic-crypto/weak-kdf`. Test-only. Never enable in
# production builds. See `mosaic-crypto/Cargo.toml`.
weak-kdf = ["mosaic-crypto/weak-kdf", "mosaic-client/weak-kdf"]

[dev-dependencies]
mosaic-client = { path = "../mosaic-client", version = "0.1.0", features = ["__variant-introspection"] }
mosaic-vectors = { path = "../mosaic-vectors", version = "0.1.0" }
strum = { version = "=0.28.0", default-features = false }
wasm-bindgen-test = "=0.3.68"

[lints]
workspace = true
