[package]
name = "mosaic-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mosaic-client = { path = "../mosaic-client", version = "0.0.0-dev" }
mosaic-crypto = { path = "../mosaic-crypto", version = "0.0.0-dev" }
mosaic-domain = { path = "../mosaic-domain", version = "0.0.0-dev" }
mosaic-media = { path = "../mosaic-media", version = "0.0.0-dev" }
self_cell = "=1.2.2"
wasm-bindgen = "=0.2.118"
zeroize = "=1.8.2"
ciborium = "=0.2.2"
blake2 = { version = "=0.10.6", default-features = false }
sha2 = "=0.11.0"

[features]
default = []
cross-client-vectors = ["mosaic-crypto/__test-introspection"]
# SECURITY: Propagates `mosaic-crypto/weak-kdf`. Test-only. Never enable in
# production builds. See `mosaic-crypto/Cargo.toml`.
weak-kdf = ["mosaic-crypto/weak-kdf", "mosaic-client/weak-kdf"]

[dev-dependencies]
mosaic-client = { path = "../mosaic-client", version = "0.0.0-dev", features = ["__variant-introspection"] }
mosaic-vectors = { path = "../mosaic-vectors", version = "0.0.0-dev" }
strum = { version = "=0.28.0", default-features = false }
wasm-bindgen-test = "=0.3.68"

[lints]
workspace = true
